[package]
name = "modulo-n-tools"
version = "0.1.0"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dev-dependencies]
test-case = "1.1.0"
rand = "0.8.3"
num = "0.4.0"
rug = "1.11.0"
[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
