[package]
name = "modulo-n-tools"
version = "0.2.0"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"
description = "modulo tools"
license = "AGPL-3.0-or-later"
documentation = "https://docs.rs/modulo-n-tools/"
repository = "https://gitlab.com/Toru3/modulo-n-tools"
readme = "README.md"
keywords = ["modulo", "Montgomery"]
categories = ["no-std", "mathematics", "algorithms"]

[dependencies]
[dev-dependencies]
test-case = "1.1.0"
rand = "0.8.3"
num = "0.4.0"
rug = "1.11.0"
[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
